--- a/public/midterm/mid1.html
+++ b/public/midterm/mid1.html
@@ -5,13 +5,15 @@
   <style>
     div#app { padding: 50px; margin: 30px auto; max-width: 600px; 
       border: 1px solid #ccc; box-shadow: 3px 3px 3px #aaa; font-size: 11pt; }
-    input { padding: 6px; width: 500px; }
-    
+    input { padding: 6px; width: 250px; }
+    button { padding: 6px; width: 50px; }
   </style>
 </head>
 <body>
   <div id="app">
     <input type="text" v-model="title" />    
+    <button type="button">++</button>
+    <button type="button">--</button>
   </div>
   <script type="text/javascript">
     var app = new Vue({
